Remove unused require

--- a/README.mkd
+++ b/README.mkd
@@ -1,11 +1,9 @@
 # nodb
 
-### Minimal database API designed for extensibility.
+#### Minimal database API designed for extensibility.
 
-####Build status
 [![Build Status](https://travis-ci.org/tarruda/nodb.png)](https://travis-ci.org/tarruda/nodb)
-
-####Browser support
+<br>
 [![browser support](https://ci.testling.com/tarruda/nodb.png)](https://ci.testling.com/tarruda/nodb)
 
 
@@ -14,5 +12,3 @@
 ```sh
 npm install --save nodb
 ```
-
-## Usage
